Fix id mapping